# weatherapp

./: Cargo.toml  README.md
src/: app.rs  app_widget.rs  appinfo.rs  gettrains.rs  getweather.rs  main.rs  opmapi.rs  opmstatus.rs  ui.rs  weather.rs  weatherapi.rs  weatherconv.rs  wmataapi.rs
src/api/: mod.rs  opmapi.rs  weatherapi.rs  wmataapi.rs
src/ui/: app_widget.rs  mod.rs
