[package]
name = "weatherapp"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
egui = "0.33.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
